<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFF"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- 性别要求 -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/choose_sex_lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_orange_circular_line"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_sex_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_left"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/no_rule"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:text="@string/male"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_right"
                    android:paddingBottom="3dp"
                    android:paddingLeft="12dp"
                    android:paddingRight="12dp"
                    android:paddingTop="3dp"
                    android:text="@string/female"
                    android:textColor="@color/colorTitle" />
            </LinearLayout>

            <TextView
                android:id="@+id/sex_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/choose_sex_lin"
                android:layout_toStartOf="@id/choose_sex_lin"
                android:text="@string/sex_rule" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />
        <!-- 是否为学生党 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ToggleButton
                android:id="@+id/student_rule"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/toggle_check"
                android:textColor="@null"
                android:textOff="@null"
                android:textOn="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/student_rule"
                android:layout_toStartOf="@id/student_rule"
                android:text="@string/student_rule" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />
        <!-- 是否有健康证 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <ToggleButton
                android:id="@+id/headth_rule"
                android:layout_width="45dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/toggle_check"
                android:textColor="@null"
                android:textOff="@null"
                android:textOn="@null" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/headth_rule"
                android:layout_toStartOf="@id/headth_rule"
                android:text="@string/headth_rule" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />

        <!-- 年龄段 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/age_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/age_rule" />

            <LinearLayout
                android:id="@+id/choose_age_lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/age_rule"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_orange_circular_line"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_age_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_left"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/no_rule"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/age_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/age_top"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/age_center_one"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/age_center_one"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/age_center_two"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/age_center_two"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/age_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_right"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/age_bottom"
                    android:textColor="@color/colorTitle" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />
        <!-- 身高 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/height_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/height_rule" />

            <LinearLayout
                android:id="@+id/choose_height_lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/height_rule"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_orange_circular_line"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_height_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_left"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/no_rule"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/height_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/height_top"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/height_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/height_center"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/height_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_right"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/height_bottom"
                    android:textColor="@color/colorTitle" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />
        <!-- 体重 -->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/weight_rule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="5dp"
                android:text="@string/weight_rule" />

            <LinearLayout
                android:id="@+id/choose_weight_lin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@id/weight_rule"
                android:layout_centerVertical="true"
                android:background="@drawable/bg_orange_circular_line"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/no_weight_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_left"
                    android:paddingBottom="3dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingTop="3dp"
                    android:text="@string/no_rule"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/weight_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/weight_top"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/weight_center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_line"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/weight_center"
                    android:textColor="@color/colorTitle" />

                <TextView
                    android:id="@+id/weight_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_orange_circular_line_right"
                    android:paddingBottom="3dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:paddingTop="3dp"
                    android:text="@string/weight_bottom"
                    android:textColor="@color/colorTitle" />
            </LinearLayout>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.7dp"
            android:background="#dedede" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <Button
                android:id="@+id/choose_reset"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:background="@drawable/bg_gray_circular_line"
                android:text="@string/choose_reset"
                android:textColor="#999999"
                android:textSize="16sp" />

            <Button
                android:id="@+id/choose_sure"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:layout_weight="2"
                android:background="@drawable/bg_orange_circular_solid"
                android:text="@string/choose_sure"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>